      maximized. (CTRONDLP)

    - Implemented pertinent parts of Jonathan A's patch for CygWin Perl. (CTRONDLP)

    - Added WindowFromPoint function and wptr.pl example script. (CTRONDLP)

    - Added the MouseClick function and documentation. (CTRONDLP)

1.50.2-ad Sun May 30 12:40:00 2004

    - Push*Button() functions will now correctly not manipulate disabled
      buttons. (CTRONDLP)

    - Fixed various compiler warnings. (CTRONDLP)

    - Minor updates to the documentation. (CTRONDLP)

    - Included initial script recording application; which is still a
      work-in-progress. (CTRONDLP)

1.50.3-ad Wed Feb 02 17:42:00 2005

     - Add more examles in eg directory (SZABGAB)
     - Tests using Test::More now (SZABGAB)
     - Some more documentation (SZABGAB)
     - Explanation how to setup development environment (SZABGAB)
     - A number of new exported methods regarding Menu items
       such as GetMenuItemInfo 
     - Added support for some 32bit controls: GetListViewContents, 
       SelListViewItem, SelListViewItemText, GetTabItems,
       SelTabItem, SelTabItemText, SelTreeViewItemPath (CTRONDLP)
     - Added basic mouse wheel support: MouseMoveWheel (CTRONDLP)
     - Added IsListViewItemSel and IsTabItemSel (CTRONDLP)
     - Updated SetFocus routine with AttachWin code (CTRONDLP)

? ? ? ? ? ?

     - Added some code to Makefile.PL to help with environments
       where file name case is of concern. (CTRONDLP)
     - Fixed case of GetMenuItemID
     - FindWindowLike will now handle control Ids = 0.
     - Added following functions:
        * AllocateVirtualBuffer
        * FreeVirtualBuffer
        * ReadFromVirtualBuffer
        * WriteToVirtualBuffer
       All those functions can be implementing marshaling when sending
       messages to advanced controls
        * WaitForReady
        * SelComboString
        * PushChildById
     - Rewriten function SelTreeViewItemPath
     - Modified POD in GuiTest.pm in INSTALLATION section. Added SEE ALSO
