@@ -1,5 +1,5 @@
 #
-# $Id: guitest.pm,v 1.35 2005/09/11 13:01:04 pkaluski Exp $
+# $Id: guitest.pm,v 1.36 2005/09/25 07:32:27 pkaluski Exp $
 #
 
 =head1 NAME
@@ -130,6 +130,7 @@ require AutoLoader;
         GetMenuItemIndex
         GetMenuItemInfo
         GetParent
+        GetPopupHandle
         GetScreenRes
         GetSubMenu
         GetSystemMenu
@@ -1333,6 +1334,14 @@ sub TVPathWalk
    SelTreeViewItemPath($window, $oldpath);
 
 =cut
+
+=item $hpopup = GetPopupHandle($hwnd, $x, $y, [$wait])
+
+   This function gets the handle of a popup window generated by
+   right-clicking at the $x and $y screen coordinates (absolute). An
+   optional delay can be entered which will wait the given number of
+   milliseconds after the right-click for the window to appear (default
+   is 50). Zero is returned when no popup menu is found.
 
 =back
 
